--- a/sb_payment.html
+++ b/sb_payment.html
@@ -44,46 +44,73 @@
    
    <section>
       <h1>Payment Form</h1>
-      <fieldset id="billing" action="http://www.example.com/sb/payment" method="POST">
-        <form id="payment">
-            <legend>Billing Information (required)</legend>
+      <fieldset id="billing">
+         <legend>Billing Information (required)</legend>
+        <form id="payment" action="http://www.example.com/sb/payment" method="POST">
                 <label for="firstbox">First Name</label>
                 <input type="text" name="fName" id="firstbox" required>
                 <label for="lastname">Last Name</label>
-                <input type="text" name="lName" id="lastname"required>
+                <input type="text" name="lName" id="lastname" required>
                 <label for="streetbox">Street Address</label>
-                <input type="text" name="street" id="streetbox"required>
+                <input type="text" name="street" id="streetbox" required>
                 <label for="streetBox2">Street Address (2)</label>
                 <input type="text" name="street2" id="streetBox2">
                 <label for="citybox">City</label>
-                <input type="text" name="city" id="citybox"required>
+                <input type="text" name="city" id="citybox" required>
                 <label for="statebox">State</label>
-                <input type="text" name="state" id="statebox"required>
+                <input type="text" name="state" id="statebox" required>
                 <label for="zipbox">Zip/Postal Code</label>
-                <input type="text" name="zip" id="zipbox">
+                <input type="text" name="zip" id="zipbox" pattern="^\d{5}(-\d{4})?$">
                 <label for="countrybox">Country</label>
-                <input type="text" name="Country" id="Countrybox"required>
+                <input type="text" name="Country" id="Countrybox" required value="United States">
                 <label for="phonebox">Phone</label>
-                <input type="tel" name="phone" id="phonebox" required>
+                <input type="tel" name="phone" id="phonebox" required pattern="^\d{10}$|^(\(\d{3}\)\s*)?\d{3}[\s-]?\d{4}$">
         </form>
     </fieldset>
-    <dl id="statelist">
-      <li>AL</li>
-      <li>AK</li>
-      <li>AZ</li>
-      <li>AR</li>
-      <li>CA</li>
-      <li>CO</li>
-      <li>CT</li>
-      <li>DE</li>
-    </dl>
+    <datalist id="statelist">
+      <option>AL</option>
+      <option>AK</option>
+      <option>AZ</option>
+      <option>AR</option>
+      <option>CA</option>
+      <option>CO</option>
+      <option>CT</option>
+      <option>DE</option>
+    </datalist>
     <fieldset id="creditcard">
       <legend>creditcard (required)</legend>
-      <label for="" class="cardlabel"></label>
-      <label for="" class="cardlabel"></label>
-      <label for="" class="cardlabel"></label>
-      <label for="" class="cardlabel"></label>
+         <fieldset>
+            <label for="amex" class="cardlabel"><img src="image/sb_amex.png" alt="amex"></label>
+            <input type="radio" id="amex" name="q1">
+            <label for="discover" class="cardlabel"><img src="image/sb_discover.png" alt="discover"></label>
+            <input type="radio" id="discover" name="q1">
+            <label for="master" class="cardlabel"><img src="image/sb_master.png" alt="master card"></label>
+            <input type="radio" id="master" name="q1">
+            <label for="visa" class="cardlabel"><img src="image/sb_visa.png" alt="visa"></label>
+            <input type="radio" id="visa" name="q1">
+         </fieldset>
+         <label for="cardBox">Credit Card</label>
+         <input type="text" id="cardBox">
+         <label for="monthList">Expiration Date</label>
+         <select id="monthList" required>
+            <option value="01">january (01)</option>
+            <option value="02">febuary (02)</option>
+            <option value="03"> march (03)</option>
+            <option value="04">april (04)</option>
+            <option value="05">may (05)</option>
+            <option value="06">june (06)</option>
+            <option value="07">july (07)</option>
+         </select>
+         <select id="yearList">
+            <option value="1">2021</option>
+            <option value="2">2020</option>
+            <option value="3">2019</option>
+            <option value="4">2018</option>
+         </select>
+         <label for="cscBox">CSC</label>
+         <input type="text" id="cscBox" pattern="^\d{3}$" placeholder="nnn">
     </fieldset>
+    <button type="submit" value="submit"><img src="image/sb_button.png" alt="submit"></button>
       <aside>
          <h1>Menu Ideas</h1>
          <h2>Salt-Roasted Pecans</h2>
